samples/_failures_safe/1761202112_6d5677_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cf48562.c: In function ‘main’:
./samples/SAFE/__tmp_3cf48562.c:151:9: error: expected expression at end of input
  151 |         case
      |         ^~~~
./samples/SAFE/__tmp_3cf48562.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cf48562.c:151:9: error: expected declaration or statement at end of input
